fixed toolbar width on mobile

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -53,7 +53,7 @@ main{
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 150px;
+            width: 200px;
             height: 40px;
             z-index: 10;
             top: -30px;
@@ -66,6 +66,9 @@ main{
             border-radius: 0 0 var(--bradius) var(--bradius) ;
             box-shadow: inset 0 0 10px #0000000c;
             transition: all 0.3s ease-in-out;
+            @media (max-width: 765px){
+                width: 30%;
+            }
             &:hover{
                 //transform: scale(110%);
                 background-color: rgba(129, 129, 129, 1);
